framec_tests/language_specific/typescript/v3_facade_smoke/negative/strict_return_top_level.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                // Native parse (SWC) should flag a malformed if-statement
                if (
                => $^;
            }
        }
}
